reset div as flexboxes / add sass-lint / move eslint to devDep / add common styles

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -27,7 +27,7 @@
     %>
   </head>
   <body>
-    <div id="root">
+    <div id="root"></div>
 
     <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
     <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>" type="text/javascript"></script>
